<resources>

    <string name="app_name">SDR Driver</string>
    <string name="device_open_loading_title">SDR Driver</string>
    <string name="device_open_loading_subtitle">Starting…</string>
    <string name="sdr_tcp_exec">sdr_tcp</string>
	<string name="help">Help</string>
	<string name="stream">Start stream</string>
	<string name="kill">Kill</string>
	<string name="args_hint">sdr_tcp command line arguments</string>
	<string name="default_args">-a 0.0.0.0 -p 14423 -f 91800000 -s 1024000 -T 0</string>
	<string name="copy">Copy</string>
	<string name="copied_to_clip">Output was copied to clipboard</string>
	<string name="clear">Clear</string>
	
	<string name="error">Error</string>
	<string name="notsupported">The required action was not executed due to being not available.</string>

	<string name="choose_device">Device Chooser</string>
	
	<string name="btn_ok">OK</string>

    <string name="license">License</string>
	<string name="help_info"> <![CDATA[
	 
	    <h2>About this app</h2>
	    <p>This application is a port of rtl_tcp to the android platform. It allows other applications to start rtl_tcp and use the raw I/Q samples that it reads from
	    USB DVB-T dongles based on the RTL2832U chip and Hack RF</p>
	    <p>It also allows Android to stream over the network directly from the UI of the driver. This is an advanced feature and there could be bugs.</p>
		<h2>Notes and license</h2>
		<p>The app currently is experimental and could be unstable. Please, share your experience <a href="mailto:driver@sdrtouch.com">by sending me an email</a>.</p>
		<p>This app is open source and is licensed under GPL2+. The source code could be found on <a href="https://github.com/signalwareltd/rtl_tcp_andro-">github.com/signalwareltd/rtl_tcp_andro-</a></p>
		<p>For detailed information about the license, use the License button.</p>
		<h2>Included open source software</h2>
		<p>Modified version of librtlsdr <a href="http://sdr.osmocom.org/trac/wiki/rtl-sdr">sdr.osmocom.org/trac/wiki/rtl-sdr</a></p>
		<p>Modified version of libusb <a href="http://libusb.info/">libusb.info</a></p>
		<p>Modified version of hackrf_android <a href="https://github.com/demantz/hackrf_android">github.com/demantz/hackrf_android</a></p>
        <p>Modified version of libhackrf <a href="https://github.com/mossmann/hackrf/tree/master/host/libhackrf">github.com/mossmann/libhackrf</a></p>
	]]></string>
	
	<string name="warn_txt">The driver has been installed successfully! Please, launch your host application and it will trigger the driver automatically.</string>
    <string name="driver_ready_title">Driver Ready</string>
    <string name="driver_ready">Driver is ready</string>
    <string name="platform_not_supported">Your Android platform is not supported. Please get in touch with us to provide us more information about your device so we can support it in future.</string>
    <string name="enable_gui">Server Mode</string>

	<string name="action_settings">Settings</string>

	<string name="permission_title">Permission Required</string>
	<string name="permission_message">Would like to access your SDR device</string>
	<string name="permission_deny">Deny</string>
	<string name="permission_allow_once">Allow Once</string>
	<string name="permission_allow_always">Allow Every Time</string>

</resources>